--- a/report/src/sections/03-background.tex
+++ b/report/src/sections/03-background.tex
@@ -1,3 +1,18 @@
 
 \section{Background}\label{sec:background}
-This is the background/preliminaries section
+
+
+\subsection{Notation}\label{sec:background-notation}
+
+
+
+
+\subsection{Zero-knowledge proofs}\label{sec:background-zkps}
+
+
+
+
+\subsection{Springproofs}\label{sec:background-springproofs}
+
+
+
