--- a/report/src/bib/main.bib
+++ b/report/src/bib/main.bib
@@ -71,3 +71,10 @@
     year={2024},
     organization={Springer}
 }
+
+@article{Curdleproofs,
+    title        = {Curdleproofs},
+    author       = {The Ethereum Foundation Cryptography Research Team},
+    note         = {Accessed: 24-04-2025},
+    url = {https://github.com/asn-d6/curdleproofs/blob/main/doc/curdleproofs.pdf}
+}
