--- a/report/src/bib/main.bib
+++ b/report/src/bib/main.bib
@@ -78,3 +78,11 @@
     note         = {Accessed: 24-04-2025},
     url = {https://github.com/asn-d6/curdleproofs/blob/main/doc/curdleproofs.pdf}
 }
+
+@misc{cryptoeprint:2016/263,
+    author = {Jonathan Bootle and Andrea Cerulli and Pyrros Chaidos and Jens Groth and Christophe Petit},
+    title = {Efficient Zero-Knowledge Arguments for Arithmetic Circuits in the Discrete Log Setting},
+    howpublished = {Cryptology {ePrint} Archive, Paper 2016/263},
+    year = {2016},
+    url = {https://eprint.iacr.org/2016/263}
+}
