--- a/report/src/sections/02-related-work.tex
+++ b/report/src/sections/02-related-work.tex
@@ -7,7 +7,7 @@
 Ethereum currently has an improvement proposal suggesting the implementation of a protocol called Whisk~\cite{Whisk2024}.
 Whisk is a zero-knowledge Single secret leader election (SSLE) system that Through a zero-knowledge argument called curdleproofs~\cite{Curdleproofs} allows for the verification of the correctness of a shuffle without revealing the input or output.
 It is based on the concept of inner product arguments and does not require a honest setup.
-It uses elliptic curve cryptography based on the LS12-381 curve to achieve its goals.
+It uses elliptic curve cryptography based on the BLS12-381 curve to achieve its goals.
 
 Whisk is designed to be efficient and scalable, making it suitable for use in Ethereum and other blockchain systems.
 Whisk is one of the suggested solutions to attacks on the Ethereum network targeting block proposers.
