--- a/report/src/sections/03-background.tex
+++ b/report/src/sections/03-background.tex
@@ -8,6 +8,8 @@
 
 
 \subsection{Zero-knowledge proofs}\label{sec:background-zkps}
+Curdleproofs is a zero-knowledge proof system, which means that it allows a prover to convince a verifier that they know a secret without revealing the secret itself.
+within the context of Ethereum it could be the ability to convince someone that a transaction is valid without revealing information about the transaction such as the value of it.
 
 
 
