--- a/report/src/main.tex
+++ b/report/src/main.tex
@@ -18,12 +18,13 @@
     \input{sections/01-introduction}
     \input{sections/02-related-work}
     \input{sections/03-background}
-    \input{sections/04-experimental-protocol}
-    \input{sections/05-results}
-    \input{sections/06-discussion}
-    \input{sections/07-conclusion}
-    \input{sections/08-future-works}
-    \input{sections/09-acknowledgements}
+    \input{sections/04-approach}
+    \input{sections/05-experimental-protocol}
+    \input{sections/06-results}
+    \input{sections/07-discussion}
+    \input{sections/08-conclusion}
+    \input{sections/09-future-works}
+    \input{sections/10-acknowledgements}
 
     \clearpage
     %\printglossary[type=\acronymtype]
