--- a/report/src/setup/preamble.tex
+++ b/report/src/setup/preamble.tex
@@ -13,6 +13,9 @@
 \usepackage{booktabs}
 \usepackage{graphicx}
 \usepackage{tikz}
+\usepackage{algorithm}
+\usepackage{algorithmic}
+\usepackage{algpseudocode}
 \usetikzlibrary{arrows.meta,arrows}
 
 
