--- a/report/src/sections/04-Approach.tex
+++ b/report/src/sections/04-Approach.tex
@@ -46,7 +46,7 @@ For any $0 < \delta < 1/3$, if $T \geq 20 n / k \ln(n/\delta) + \beta $ and $ k 
 If $T$ and $k$ are chosen such that the above two conditions are met, then the protocol is an $(\epsilon , \delta)$-secure $(T,n,k)$-shuffle in the presence of a $(\alpha, \beta)$-adversary where $\epsilon = 2/(n-\alpha)$.
 
 This formula is the lowest theoretically proven bound for $T$ and $k$.
-It is also possible to find lower secure values for $T$ and $k$ but this has to be done experimentally.
+It is however possible to find lower secure values for $T$ and $k$ but this has to be done experimentally.
 
 
 
