--- a/report/src/sections/05-experimental-protocol.tex
+++ b/report/src/sections/05-experimental-protocol.tex
@@ -3,7 +3,7 @@
 
 
 
-\subsection{Size of "curdleproofs"}\label{sec:experimental-protocol-size}
+\subsection{Size of curdleproofs}\label{sec:experimental-protocol-size}
 In this experiment we measured the time to run both the original curdleproofs and our version with the addition of springproofs.
 Curdleproofs was run with the shuffle sizes of 64 and 128 as it has to run with a power of 2.
 
