--- a/report/src/setup/preamble.tex
+++ b/report/src/setup/preamble.tex
@@ -13,6 +13,7 @@
 \usepackage{booktabs}
 \usepackage{graphicx}
 \usepackage{tikz}
+\usepackage{listings}
 \usetikzlibrary{arrows.meta,arrows}
 
 
@@ -20,6 +21,7 @@
 \usepackage[hidelinks]{hyperref}
 \renewcommand{\subsubsectionautorefname}{section}
 \renewcommand{\subsectionautorefname}{section}
+\renewcommand{\gets}{\leftarrow}
 \usepackage[textsize=small,obeyDraft]{todonotes}
 \usepackage[newfloat,outputdir=../out]{minted}
 \usepackage[backend=biber,
