--- a/report/src/sections/04-Approach.tex
+++ b/report/src/sections/04-Approach.tex
@@ -66,7 +66,7 @@ This function is used to ensure that the inner product argument eventually will 
 The core concept of the function is to split vector sizes before each recursive round of the protocol.
 Then, the fold is only done on one of the two sets.
 
-Springproofs present different scheme functions and prove some of them optimally.
+Springproofs present different scheme functions and prove some of them to be optimal.
 One of these functions is an optimized version of their \textit{pre-compression method}, which splits the vectors in the following way:
 
 \begin{figure}[ht]\label{fig:schemefunc}
