--- a/report/src/sections/04-Approach.tex
+++ b/report/src/sections/04-Approach.tex
@@ -63,7 +63,7 @@ Using the findings of Springproofs means Curdleproofs could decrease its proof s
 
 One of the most notable findings in Springproofs is the usage of their so-called scheme function.
 This function is used to ensure that the inner product argument eventually will fold down to a vector of size 1.
-The core concept of the function is to split vector sizes before each recursive round of the protocol.
+The core concept of the function is to split the vector before each recursive round of the protocol.
 Then, the fold is only done on one of the two sets.
 
 Springproofs present different scheme functions and prove some of them to be optimal.
