--- a/report/src/bib/main.bib
+++ b/report/src/bib/main.bib
@@ -86,3 +86,13 @@
     year = {2016},
     url = {https://eprint.iacr.org/2016/263}
 }
+
+@misc{heimbach2024deanonymizingethereumvalidatorsp2p,
+    title={Deanonymizing Ethereum Validators: The P2P Network Has a Privacy Issue},
+    author={Lioba Heimbach and Yann Vonlanthen and Juan Villacis and Lucianna Kiffer and Roger Wattenhofer},
+    year={2024},
+    eprint={2409.04366},
+    archivePrefix={arXiv},
+    primaryClass={cs.CR},
+    url={https://arxiv.org/abs/2409.04366},
+}
