--- a/report/src/bib/main.bib
+++ b/report/src/bib/main.bib
@@ -96,3 +96,17 @@
     primaryClass={cs.CR},
     url={https://arxiv.org/abs/2409.04366},
 }
+@misc{ouroldpaper,
+    title={"Denial of Validator Anonymity: A
+De-Anonymization Attack on Ethereum", Computer Science 9 project},
+    author={Anders Malta Jakobsen and Oliver Holmgaard},
+    year={2025}
+}
+
+@article{EthereumSSLE2024,
+    title        = {Secret leader election},
+    author       = {ethereum.org},
+    year         = {2024},
+    note         = {Accessed: 22-10-2024},
+    url = {https://ethereum.org/en/roadmap/secret-leader-election/}
+}
