--- a/report/src/sections/06-results.tex
+++ b/report/src/sections/06-results.tex
@@ -1,2 +1,11 @@
 \section{Results}\label{sec:results}
 These are the results
+\begin{figure*}[!ht]
+    \centering
+    \subfloat[\centering Proving Time]{{\includegraphics[width=0.45\textwidth]{figures/results/provingtime} }}%
+    \qquad
+    \subfloat[\centering Verifying Time]{{\includegraphics[width=0.45\textwidth]{figures/results/verifyingtime} }}%
+    \caption{The timed results compared between CAAUrdleProofs and Curdleproofs}%
+    \label{fig:resulttimes}%
+\end{figure*}
+And they are very good
