--- a/report/src/bib/main.bib
+++ b/report/src/bib/main.bib
@@ -86,3 +86,16 @@
     year = {2016},
     url = {https://eprint.iacr.org/2016/263}
 }
+
+@InProceedings{10.1007/BFb0054851,
+    author="Boneh, Dan",
+    editor="Buhler, Joe P.",
+    title="The Decision Diffie-Hellman problem",
+    booktitle="Algorithmic Number Theory",
+    year="1998",
+    publisher="Springer Berlin Heidelberg",
+    address="Berlin, Heidelberg",
+    pages="48--63",
+    abstract="The Decision Diffie-Hellman assumption (ddh) is a gold mine. It enables one to construct efficient cryptographic systems with strong security properties. In this paper we survey the recent applications of DDH as well as known results regarding its security. We describe some open problems in this area.",
+    isbn="978-3-540-69113-6"
+}
