Added DDH and IPA acronyms

--- a/report/src/setup/acronyms.tex
+++ b/report/src/setup/acronyms.tex
@@ -20,3 +20,5 @@
 \newacronym{p2p}{P2P}{Peer-to-Peer}
 \newacronym{de-anon paper}{De-anonymizing Paper}{"Deanonymizing Ethereum Validators: The P2P Network Has a Privacy Issue"}
 \newacronym{mev}{MEV}{Maximal Extractable Value}
+\newacronym{ddh}{DDH}{Decisional Diffie-Hellman}
+\newacronym{ipa}{IPA}{Inner Product Argument}
