--- a/report/src/sections/04-Approach.tex
+++ b/report/src/sections/04-Approach.tex
@@ -3,7 +3,7 @@
 As explained in~\autoref{sec:background}, Curdleproofs makes use of three different proofs.
 This work focuses on improving the underlying~\gls{ipa}.
 Especially the running time and proof size of the protocol are of interest.
-The following is our approach on, how we modified the~\gls{ipa}.
+The following is our approach to, how we modified the~\gls{ipa}.
 
 \subsection{Springproofs}\label{sec:approach-springproofs}
 In Chapter 6 of Curdleproofs~\cite{Curdleproofs}, they explain the efficiency of the protocol, including also the size of the proof.
