--- a/report/src/sections/04-Approach.tex
+++ b/report/src/sections/04-Approach.tex
@@ -20,7 +20,7 @@ Seeing the proof size of Curdleproofs being dependent on $\ell$ means that this 
 
 One of the most notable findings in Springproofs is the usage of their so-called scheme function.
 This function is used to ensure that the~\gls{ipa} eventually will fold down to a vector of size 1.
-In a general~\gls{ipa}, also Curdleproofs, if the size of the vectors were not a power of two, the argument would not recursive down to size 1, as they work by halving the vectors every recursive round.
+In a general~\gls{ipa}, Curdleproofs included, if the size of the vectors were not a power of two, the argument would not recursive down to size 1, as they work by halving the vectors every recursive round.
 
 
 The core concept of the Springproofs scheme function is to split the vectors into sets, $T,S$ before each recursive round of the protocol.
