--- a/report/src/sections/04-Approach.tex
+++ b/report/src/sections/04-Approach.tex
@@ -67,7 +67,7 @@ Though, this defeats the attempt of lowering the proof size, as it would now cor
 It is notable to mention that using the folding as shown in~\autoref{fig:fold}(b) results in the second recursive round being a size corresponding to a power of two.
 This means that the rest of the protocol will run as a general~\gls{ipa}, without the actual need for splitting the vectors, which can also be seen in~\autoref{fig:schemefunc}.
 
-With this Springproofs in mind, we have made a modification to the~\gls{ipa} of Curdleproofs
+With the idea from Springproofs in mind, we have made a modification to the~\gls{ipa} of Curdleproofs
 We call this modified protocol, CAAUrdleproof.
 For generality and readability, we show the split of vectors happening every round.
 
