--- a/report/src/sections/04-Approach.tex
+++ b/report/src/sections/04-Approach.tex
@@ -118,7 +118,7 @@ return $(B_C,B_D,\mathbf{\pi},c,d)$
 \end{figure}
 
 First, we have step 1, which is the setup phase.
-It is done exactly the same way is in Curdleproofs.
+It is done exactly the same way as in Curdleproofs.
 To ensure zero-knowledge, two blinding vectors for each commitment are constructed.
 These are also given the properties, $(\mathbf{r}_C\times \mathbf{d}+\mathbf{r}_D\times \mathbf{c})=0$ and $\mathbf{r}_C\times\mathbf{r}_D=0$, ensuring the completeness of the protocol.
 
