--- a/report/src/sections/04-Approach.tex
+++ b/report/src/sections/04-Approach.tex
@@ -129,7 +129,7 @@ The two vectors are then blinded and multiplied by the $\alpha$ hash to ensure t
 
 
 Now, the recursive proof construction begins.
-As explained, at the start of the recursive round, the \texttt{while}-loop, we find the split the vectors, with $f(n)$ being the function from~\autoref{fig:schemefunc}.
+As explained, at the start of the recursive round, the \texttt{while}-loop, we find the split of the vectors, with $f(n)$ being the function from~\autoref{fig:schemefunc}.
 Then, we find half the length of the $T$ set, as this is the set, we are doing the recursive round on.
 Equally we split our witness vectors and the group vectors using $T$ and $S$.
 
